[metadata]
name = hashserver
version = 0.1.0
description = Simple FastAPI-based hash server
license = MIT
license_files = LICENSE.txt
author = Sjoerd de Vries

[options]
python_requires = >=3.9
py_modules =
    hashserver
    hash_file_response
install_requires =
    fastapi
    uvicorn[standard]
    typing-extensions

[options.entry_points]
console_scripts =
    hashserver = hashserver:main
